@@ -50,7 +50,7 @@ class OggTheoraInfo(object):
                 "found Theora version %d.%d != 3.2" % (vmaj, vmin))
         fps_num, fps_den = struct.unpack(">2I", data[22:30])
         self.fps = fps_num / float(fps_den)
-        self.bitrate, = struct.unpack(">I", data[37:40] + "\x00")
+        self.bitrate = struct.unpack(">I", data[37:40] + "\x00")[0]
         self.serial = page.serial
 
     def pprint(self):
